8371762: Incorrect use of checked_cast in Arguments::process_settings_file